@@ -1,6 +1,7 @@
 intended v0.1.25
 + fix cookie.remove
 + implement create
++ implement arrayToObject
 
 v0.1.24
 + implement cookie
